--- a/public/main-collageTheme.css
+++ b/public/main-collageTheme.css
@@ -1,4 +1,6 @@
 html {
+  /* height: 100%; */
+
   background-color: #000000;
   background-image: url("https://www.transparenttextures.com/patterns/black-paper.png");
 
@@ -9,11 +11,15 @@ html {
 }
 
 body {
+  /* height: 100%; */
+
   margin: 0;
   overflow-x: hidden;
 }
 
 main {
+  /* height: 100%; */
+
   margin: 0 8px;
 
   background-color: #f1eaea;
@@ -45,29 +51,34 @@ header a {
 }
 
 #title {
+  width: 100%;
+
   margin: 0;
 
   font-family: "Permanent Marker", serif;
   font-size: 3rem;
+
+  position: relative;
 }
 
 /* [x]: adjust position */
 #title:after {
   content: "";
 
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translate(-5px, 80px) rotate(0.008turn);
-
   background-image: url("assets/images/AS(2).png");
   background-size: contain;
   background-repeat: no-repeat;
 
-  z-index: 1;
+  width: 650px;
+  height: 650px;
 
-  width: 25%;
-  height: 25%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(10px, 80px) rotate(0.008turn) scale(0.2);
+  transform-origin: top right;
+
+  z-index: 1;
 }
 
 #title span {
@@ -80,16 +91,8 @@ header a {
 }
 
 /******************** LARGER VIEWPORTS ********************/
-@media only screen and (min-width: 600px) {
-  /* [x]: adjust position */
-  #title:after {
-    transform: translate(-5px, 0) rotate(0.008turn);
-    z-index: 1;
-
-    width: 20%;
-    height: 20%;
-  }
-}
+/* @media only screen and (min-width: 600px) {
+} */
 
 /******************** MOBILE FIRST ********************/
 /********** FOOTER CONTENT **********/
@@ -107,22 +110,24 @@ footer {
   border-top: 0.3rem solid #f1eaea;
 
   position: relative;
+  bottom: 0;
 }
 
 footer:before {
   content: "";
-  height: 100px;
-  width: 100px;
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  transform: translate(5px, -35px) rotate(-0.005turn);
 
   background-image: url("assets/images/AS(1).png");
   background-size: contain;
   background-repeat: no-repeat;
+
+  width: 650px;
+  height: 650px;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translate(0, -20px) rotate(-0.005turn) scale(0.2);
+  transform-origin: bottom left;
 }
 
 footer p {
